<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ui.home.updateAlimentoFragment">

    <EditText
        android:id="@+id/et_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/NombreAlimento"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/et_descripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/descripAlimento"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/et_calorias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/calorias"
        android:inputType="number" />


    <Button
        android:id="@+id/bt_update_alimento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/btUpdateLugar"
        android:textColorHint="@color/white" />

    <Button
        android:id="@+id/bt_delete_alimento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/bt_delete_alimento"
        android:textColorHint="@color/white" />

    <ImageButton
        android:id="@+id/btPlay"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_weight="1"
        android:contentDescription="@string/msgEscucharAudio"
        android:src="@drawable/ic_play" />

    <ImageView
        android:id="@+id/imagen"
        android:layout_width="wrap_content"
        android:layout_height="380dp"
        android:contentDescription="@string/msg_imagen"
        android:scaleType="centerInside"
        tools:ignore="ImageContrastCheck"
        tools:src="@tools:sample/backgrounds/scenic" />
</LinearLayout>

