<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.proyectop.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_addAlimentoFragment"
            app:destination="@id/addAlimentoFragment" />
        <action
            android:id="@+id/action_nav_home_to_updateAlimentoFragment"
            app:destination="@id/updateAlimentoFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.proyectop.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.proyectop.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/addAlimentoFragment"
        android:name="com.example.proyectop.ui.home.addAlimentoFragment"
        android:label="fragment_add_alimento"
        tools:layout="@layout/fragment_add_alimento" >
        <action
            android:id="@+id/action_addAlimentoFragment_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
    <fragment
        android:id="@+id/updateAlimentoFragment"
        android:name="com.example.proyectop.ui.home.updateAlimentoFragment"
        android:label="fragment_update_alimento"
        tools:layout="@layout/fragment_update_alimento" >
        <action
            android:id="@+id/action_updateAlimentoFragment_to_nav_home"
            app:destination="@id/nav_home" />
        <argument
            android:name="alimentoArg"
            app:argType="com.example.proyectop.model.Alimento" />
    </fragment>
</navigation>